--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </div>
     </header>
     <main>
+        <!---------Start Journey Influencer -------->
         <section class="top-container">
             <div class="container">
                 <div class="half-width">
@@ -42,7 +43,8 @@
                 </div>
             </div>
         </section>
-        <section>
+        <!-------LOGO SECTION------->
+        <section class="logo-section">
             <div class="logos">
                 <div class="logo">
                     <img src="logos/Alibaba.svg" alt="">
@@ -54,7 +56,155 @@
                     <img src="logos/Walmart.svg" alt="">
                 </div>
             </div>
-        </section> 
+        </section>
+        <!--------POPULAE COLLECTION--------->
+        <section>
+                <div class="Top-collections">
+                    <h2 class="collection-title">Popular Collection</h2>
+                    <div class="collections"> 
+                        <div class="collection-details">
+                            <img src="images/tripod.png" alt="">
+                            <h3 class="info-head">Flex Tripod</h3>
+                            <p class="info-price">$50.85</p>
+                            <div class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span> 4.99</span>
+                                <p><small>Wordwide shifting available
+                                    Buyers protection possible!</small></p>
+                            </div>
+                        </div>
+                        <div class="collection-details">
+                            <img src="images/mic.png" alt="">
+                            <h3 class="info-head">Microphone</h3>
+                            <p class="info-price">$120.25</p>
+                            <div class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span> 4.99</span>
+                                <p><small>Wordwide shifting available
+                                    Buyers protection possible!</small></p>
+                            </div>
+                        </div>
+                        <div class="collection-details">
+                            <img src="images/airpod.png" alt="">
+                            <h3 class="info-head">Airpod</h3>
+                            <p class="info-price">$100.00</p>
+                            <div class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span> 4.99</span>
+                                <p><small>Wordwide shifting available
+                                    Buyers protection possible!</small></p>
+                            </div>
+                        </div>
+                        <div class="collection-details">
+                            <img src="images/drone.png" alt="">
+                            <h3 class="info-head">Drone</h3>
+                            <p class="info-price">$980.25</p>
+                            <div class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span> 4.99</span>
+                                <p><small>Wordwide shifting available
+                                    Buyers protection possible!</small></p>
+                            </div>
+                        </div>
+                        <div class="collection-details">
+                            <img src="images/single-light.png" alt="">
+                            <h3 class="info-head">Light Setup</h3>
+                            <p class="info-price">$1200.00</p>
+                            <div class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span> 4.99</span>
+                                <p><small>Wordwide shifting available
+                                    Buyers protection possible!</small></p>
+                            </div>
+                        </div>
+                        <div class="collection-details">
+                            <img src="images/setup.png" alt="">
+                            <h3 class="info-head">Photoshoot Set</h3>
+                            <p class="info-price">$1200.00</p>
+                            <div class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span> 4.99</span>
+                                <p><small>Wordwide shifting available
+                                    Buyers protection possible!</small></p>
+                            </div>
+                        </div>
+                        <div class="collection-details">
+                            <img src="images/camera.png" alt="">
+                            <h3 class="info-head">Vlogging Camera</h3>
+                            <p class="info-price">$1800.80</p>
+                            <div class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span> 4.99</span>
+                                <p><small>Wordwide shifting available
+                                    Buyers protection possible!</small></p>
+                            </div>
+                        </div>
+                        <div class="collection-details">
+                            <img src="images/lights.png" alt="">
+                            <h3 class="info-head">Green Screen</h3>
+                            <p class="info-price">$25.48</p>
+                            <div class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span> 4.99</span>
+                                <p><small>Wordwide shifting available
+                                    Buyers protection possible!</small></p>
+                            </div>
+                        </div>
+                        <div class="collection-details">
+                            <img src="images/action.png" alt="">
+                            <h3 class="info-head">Action Camera</h3>
+                            <p class="info-price">$380.48</p>
+                            <div class="ratting">
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star-half-stroke"></i>
+                                <span> 4.99</span>
+                                <p><small>Wordwide shifting available
+                                    Buyers protection possible!</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="next-page">
+                    <a href="#">See More<i class="fa-solid fa-arrow-right"></i></a>
+                </div>
+
+        </section>
+
     </main>
 </body>
 </html>
