--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             </div>
         </section>
         <!--------POPULAE COLLECTION--------->
-        <section>
-                <div class="Top-collections">
+        <section class="Top-collections">
+                
                     <h2 class="collection-title">Popular Collection</h2>
                     <div class="collections"> 
                         <div class="collection-details">
@@ -198,13 +198,36 @@
                             </div>
                         </div>
                     </div>
+                    <div class="next-page">
+                        <a href="#">See More<i class="fa-solid fa-arrow-right"></i></a>
+                    </div>
+                
+        </section>
+        <section class="top-container">
+            <div class="container">
+                <div class="half-width">
+                    <img src="images/gear.png" alt="">
                 </div>
-                <div class="next-page">
-                    <a href="#">See More<i class="fa-solid fa-arrow-right"></i></a>
+                <div class="half-width">
+                    <h2 class="head-title">Start your Journey as Influencer</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur expedita deserunt ex necessitatibus illo! Doloremque unde tempore quod amet facere.</p>
+                    <button class="btn" type="submit">Join now  <i class="fa-solid fa-arrow-right"></i></button>
                 </div>
-
+            </div>
         </section>
 
     </main>
+    <footer>
+        <section class="top-footer">
+            <h2 class="footer-title">Influncer Products</h2>
+            <p><small>copyright @2022 incluncer product <br> All rights reserved</small></p>
+            <div>
+                <i class="fa-brands icon  fa-instagram"></i>
+                <i class="fa-solid  icon fa-globe"></i>
+                <i class="fa-brands icon  fa-twitter"></i>
+                <i class="fa-brands icon  fa-youtube"></i>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
